@@ -1,18 +1,16 @@
 package com.masteryhub.todoapp.service;
 
-import com.masteryhub.todoapp.dto.DueDateDto;
+import com.masteryhub.todoapp.dto.MessageDto;
 import com.masteryhub.todoapp.dto.RequestTodoDto;
 import com.masteryhub.todoapp.dto.ResponseTodoDto;
 import com.masteryhub.todoapp.models.Status;
-import com.masteryhub.todoapp.models.Tags;
 import com.masteryhub.todoapp.models.TodoEntity;
 import com.masteryhub.todoapp.models.UserEntity;
 import com.masteryhub.todoapp.repository.TodoRepository;
 import com.masteryhub.todoapp.repository.UserRepository;
-import com.masteryhub.todoapp.security.JwtGenerator;
+import com.masteryhub.todoapp.security.UserDetailsImpl;
 import java.time.Instant;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -20,58 +18,56 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 @Service
 public class TodoService {
 
-  private final JwtGenerator jwtGenerator;
   private final UserRepository userRepository;
   private final TodoRepository todoRepository;
 
   @Autowired
-  public TodoService(
-      JwtGenerator jwtGenerator, UserRepository userRepository, TodoRepository todoRepository) {
-    this.jwtGenerator = jwtGenerator;
+  public TodoService(UserRepository userRepository, TodoRepository todoRepository) {
     this.userRepository = userRepository;
     this.todoRepository = todoRepository;
   }
 
-  public ResponseEntity<ResponseTodoDto> createTodo(String token, RequestTodoDto requestTodoDto) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
+  public ResponseEntity<ResponseTodoDto> createTodo(RequestTodoDto requestTodoDto) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+    String email = userDetails.getEmail();
+    Optional<UserEntity> user = userRepository.findByEmail(email);
     TodoEntity todo = new TodoEntity(requestTodoDto);
     long customId = user.get().getTodosIds().size() + 1;
     todo.setCustomId(customId);
+    todo.setUserId(user.get().getId());
     todoRepository.save(todo);
     user.get().addTodoId(todo.getId());
     userRepository.save(user.get());
     return new ResponseEntity<>(ResponseTodoDto.from(todo), HttpStatus.CREATED);
   }
 
-  public ResponseEntity<ResponseTodoDto> getTodo(String token, Long id) {
-    String username = jwtGenerator.getUsernameFromJWT(token.substring(7));
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<TodoEntity> todos = todoRepository.findByCustomId(id);
-    if (todos.isEmpty()) {
+  public ResponseEntity<ResponseTodoDto> getTodo(Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+    String email = userDetails.getEmail();
+    Optional<UserEntity> user = userRepository.findByEmail(email);
+    Optional<TodoEntity> todoOptional =
+        todoRepository.findByUserIdAndCustomIdAndDeletedAtIsNull(user.get().getId(), id);
+    if (todoOptional.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    ResponseTodoDto userTodos =
-        todos.stream()
-            .filter(
-                todo ->
-                    user.get().getTodosIds().contains(todo.getId()) && todo.getDeletedAt() == null)
-            .findFirst()
-            .map(ResponseTodoDto::from)
-            .orElse(null);
-    return new ResponseEntity<>(userTodos, HttpStatus.OK);
+
+    return ResponseEntity.ok(ResponseTodoDto.from(todoOptional.get()));
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> getTodos(String token, int page, int size) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
+  public ResponseEntity<List<ResponseTodoDto>> getTodos(int page, int size) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+    String email = userDetails.getEmail();
+    Optional<UserEntity> user = userRepository.findByEmail(email);
     if (page > 0) page--;
     List<String> todoIds = user.get().getTodosIds();
     Pageable pageable = PageRequest.of(page, size);
@@ -80,34 +76,56 @@ public class TodoService {
     return new ResponseEntity<>(responsePage.getContent(), HttpStatus.OK);
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> getTodosByStatus(
-      String token, String status, int page, int size) {
-    token = token.substring(7);
-    Status statusEnum;
-    statusEnum = Status.valueOf(status.toUpperCase());
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
+  public ResponseEntity<List<ResponseTodoDto>> filterTodos(
+      RequestTodoDto requestTodoDto, int page, int size) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+    String email = userDetails.getEmail();
+    Optional<UserEntity> userOptional = userRepository.findByEmail(email);
+    if (userOptional.isEmpty()) {
+      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+    }
+    UserEntity user = userOptional.get();
     if (page > 0) page--;
     Pageable pageable = PageRequest.of(page, size);
-    Page<TodoEntity> todoPage =
-        todoRepository.findByIdInAndStatusAndDeletedAtIsNull(todosids, statusEnum, pageable);
+    String title = (requestTodoDto.getTitle() != null) ? requestTodoDto.getTitle() : "";
+    Status status = (requestTodoDto.getStatus() != null) ? requestTodoDto.getStatus() : null;
+    List<String> tags =
+        (requestTodoDto.getTags() != null) ? requestTodoDto.getTags() : Collections.emptyList();
+    Page<TodoEntity> todoPage;
+    if (status == null && tags.isEmpty()) {
+      todoPage =
+          todoRepository.findByUserIdAndTitleContainingIgnoreCaseAndDeletedAtIsNull(
+              user.getId(), title, pageable);
+    } else if (status == null) {
+      todoPage =
+          todoRepository.findByUserIdAndTitleContainingIgnoreCaseAndTagsInAndDeletedAtIsNull(
+              user.getId(), title, tags, pageable);
+    } else if (tags.isEmpty()) {
+      todoPage =
+          todoRepository.findByUserIdAndTitleContainingIgnoreCaseAndStatusAndDeletedAtIsNull(
+              user.getId(), title, status, pageable);
+    } else {
+      todoPage =
+          todoRepository
+              .findByUserIdAndTitleContainingIgnoreCaseAndStatusAndTagsInAndDeletedAtIsNull(
+                  user.getId(), title, status, tags, pageable);
+    }
     return ResponseEntity.ok(todoPage.map(ResponseTodoDto::from).getContent());
   }
 
-  public ResponseEntity<ResponseTodoDto> editTodo(String token, RequestTodoDto requestTodoDto) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    TodoEntity todoRes =
-        todoRepository.findByCustomId(requestTodoDto.getCustomId()).stream()
-            .filter(todo -> todosids.contains(todo.getId().toString()))
-            .findFirst()
-            .orElse(null);
-    if (todoRes == null) {
+  public ResponseEntity<ResponseTodoDto> editTodo(RequestTodoDto requestTodoDto, Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+    String email = userDetails.getEmail();
+    Optional<UserEntity> user = userRepository.findByEmail(email);
+    Optional<TodoEntity> todoOptional =
+        todoRepository.findByUserIdAndCustomId(user.get().getId(), id);
+    System.out.println(user.get().getEmail());
+    if (todoOptional.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
+    TodoEntity todoRes = todoOptional.get();
     todoRes.setTitle(requestTodoDto.getTitle());
     todoRes.setDescription(requestTodoDto.getDescription());
     todoRes.setStatus(requestTodoDto.getStatus());
@@ -117,170 +135,91 @@ public class TodoService {
     return new ResponseEntity<>(ResponseTodoDto.from(todoRes), HttpStatus.OK);
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> editManyTodos(
-      String token, List<RequestTodoDto> todoDtoList) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    List<Long> requestedTodoIds = todoDtoList.stream().map(RequestTodoDto::getCustomId).toList();
+  public ResponseEntity<List<ResponseTodoDto>> editManyTodos(List<RequestTodoDto> todoDtoList) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    if (!(authentication.getPrincipal() instanceof UserDetailsImpl userDetails)) {
+      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+    }
+    String email = userDetails.getEmail();
+    Optional<UserEntity> userOptional = userRepository.findByEmail(email);
+    if (userOptional.isEmpty()) {
+      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+    }
+    UserEntity user = userOptional.get();
+    List<Long> requestedTodoIds = todoDtoList.stream().map(RequestTodoDto::getId).toList();
     List<TodoEntity> todos =
-        todoRepository.findAllByCustomIdIn(requestedTodoIds).stream()
-            .filter(todo -> todosids.contains(todo.getId().toString()))
-            .toList();
-    System.out.println(todos);
+        todoRepository.findByUserIdAndCustomIdIn(user.getId(), requestedTodoIds);
     if (todos.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    for (RequestTodoDto todoDto : todoDtoList) {
-      for (TodoEntity todo : todos) {
-        if (todo.getCustomId().equals(todoDto.getCustomId())) {
-          todo.setTitle(todoDto.getTitle());
-          todo.setDescription(todoDto.getDescription());
-          todo.setStatus(todoDto.getStatus());
-          todo.setDueDate(todoDto.getDueDate());
-          todo.setTags(todoDto.getTags());
-        }
+    Map<Long, RequestTodoDto> updateMap =
+        todoDtoList.stream().collect(Collectors.toMap(RequestTodoDto::getId, todo -> todo));
+    for (TodoEntity todo : todos) {
+      RequestTodoDto updateData = updateMap.get(todo.getCustomId());
+      if (updateData != null) {
+        todo.setTitle(updateData.getTitle());
+        todo.setDescription(updateData.getDescription());
+        todo.setStatus(updateData.getStatus());
+        todo.setDueDate(updateData.getDueDate());
+        todo.setTags(updateData.getTags());
       }
     }
     todoRepository.saveAll(todos);
     List<ResponseTodoDto> responseDtos = todos.stream().map(ResponseTodoDto::from).toList();
-
     return ResponseEntity.ok(responseDtos);
   }
 
-  public ResponseEntity<String> hardDeleteTodo(String token, Long id) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    TodoEntity todoRes =
-        todoRepository.findByCustomId(id).stream()
-            .findFirst()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .orElse(null);
-    if (todoRes == null) {
+  public ResponseEntity<MessageDto> softDeleteTodo(Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    if (!(authentication.getPrincipal() instanceof UserDetailsImpl userDetails)) {
+      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+    }
+    String email = userDetails.getEmail();
+    Optional<UserEntity> userOptional = userRepository.findByEmail(email);
+    if (userOptional.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    user.get().removeTodoId(todoRes.getId());
-    userRepository.save(user.get());
-    todoRepository.delete(todoRes);
-    List<TodoEntity> remainingTodos =
-        todoRepository.findAll().stream()
-            .sorted(Comparator.comparing(TodoEntity::getCreatedAt))
-            .toList();
-    AtomicLong counter = new AtomicLong(1);
-    remainingTodos.forEach(todo -> todo.setCustomId(counter.getAndIncrement()));
-    todoRepository.saveAll(remainingTodos);
-    return new ResponseEntity<>("Todo deleted successfully", HttpStatus.OK);
-  }
-
-  public ResponseEntity<String> hardDeleteManyTodos(String token, String ids) {
-    if (ids == null || ids.isEmpty()) {
-      return new ResponseEntity<>("No ids provided", HttpStatus.BAD_REQUEST);
-    }
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<Long> idList =
-        Arrays.stream(ids.split(","))
-            .map(String::trim)
-            .map(Long::parseLong)
-            .collect(Collectors.toList());
-    List<String> todosids = user.get().getTodosIds();
-    List<TodoEntity> todoRes =
-        todoRepository.findAllByCustomIdIn(idList).stream()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .toList();
-    if (todoRes.isEmpty()) {
+    UserEntity user = userOptional.get();
+    Optional<TodoEntity> todoOptional =
+        todoRepository.findByUserIdAndCustomIdAndDeletedAtIsNull(user.getId(), id);
+    if (todoOptional.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    for (TodoEntity todo : todoRes) {
-      user.get().removeTodoId(todo.getId());
-      todoRepository.delete(todo);
-    }
-    userRepository.save(user.get());
-    List<TodoEntity> remainingTodos =
-        todoRepository.findAll().stream()
-            .sorted(Comparator.comparing(TodoEntity::getCreatedAt))
-            .toList();
-    AtomicLong counter = new AtomicLong(1);
-    remainingTodos.forEach(todo -> todo.setCustomId(counter.getAndIncrement()));
-    todoRepository.saveAll(remainingTodos);
-    return new ResponseEntity<>("Todos deleted successfully", HttpStatus.OK);
-  }
-
-  public ResponseEntity<String> hardDeleteAllTodos(String token) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    List<TodoEntity> todoRes = todoRepository.findAllById(todosids);
-    if (todoRes.isEmpty()) {
-      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-    }
-    for (TodoEntity todo : todoRes) {
-      todoRepository.delete(todo);
-    }
-    user.get().clearTodosIds();
-    userRepository.save(user.get());
-    List<TodoEntity> remainingTodos =
-        todoRepository.findAll().stream()
-            .sorted(Comparator.comparing(TodoEntity::getCreatedAt))
-            .toList();
-    AtomicLong counter = new AtomicLong(1);
-    remainingTodos.forEach(todo -> todo.setCustomId(counter.getAndIncrement()));
-    todoRepository.saveAll(remainingTodos);
-    return new ResponseEntity<>("All todos deleted successfully", HttpStatus.OK);
-  }
-
-  public ResponseEntity<String> softDeleteTodo(String token, Long id) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    TodoEntity todoRes =
-        todoRepository.findByCustomId(id).stream()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .findFirst()
-            .orElse(null);
-    if (todoRes == null) {
-      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-    }
+    TodoEntity todoRes = todoOptional.get();
     todoRes.setDeletedAt(Instant.now());
     todoRepository.save(todoRes);
-    return new ResponseEntity<>("Todo soft deleted successfully", HttpStatus.OK);
+    MessageDto message = new MessageDto("Todo Deleted Successfully");
+    return ResponseEntity.ok(message);
   }
 
-  public ResponseEntity<String> softDeleteManyTodo(String token, String ids) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<Long> idList;
-    idList =
-        Arrays.stream(ids.split(","))
-            .map(String::trim)
-            .map(Long::parseLong)
-            .collect(Collectors.toList());
-    List<String> todosids = user.get().getTodosIds();
-    List<TodoEntity> todoRes =
-        todoRepository.findAllByCustomIdIn(idList).stream()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .toList();
-    if (todoRes.isEmpty()) {
+  public ResponseEntity<MessageDto> softDeleteManyTodo(List<RequestTodoDto> todoDtoList) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    if (!(authentication.getPrincipal() instanceof UserDetailsImpl userDetails)) {
+      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+    }
+    String email = userDetails.getEmail();
+    Optional<UserEntity> userOptional = userRepository.findByEmail(email);
+    if (userOptional.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    for (TodoEntity todo : todoRes) {
-      todo.setDeletedAt(Instant.now());
+    UserEntity user = userOptional.get();
+    List<Long> idList = todoDtoList.stream().map(RequestTodoDto::getId).toList();
+    List<TodoEntity> todos =
+        todoRepository.findByUserIdAndCustomIdInAndDeletedAtIsNull(user.getId(), idList);
+    if (todos.isEmpty()) {
+      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    todoRepository.saveAll(todoRes);
-    return new ResponseEntity<>("Many todos soft deleted successfully", HttpStatus.OK);
+    todos.forEach(todo -> todo.setDeletedAt(Instant.now()));
+    todoRepository.saveAll(todos);
+    MessageDto message = new MessageDto("Todos Deleted Successfully");
+    return ResponseEntity.ok(message);
   }
 
-  public ResponseEntity<String> softDeleteAllTodo(String token) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
+  public ResponseEntity<MessageDto> softDeleteAllTodo() {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+    String email = userDetails.getEmail();
+    Optional<UserEntity> user = userRepository.findByEmail(email);
     List<String> todosids = user.get().getTodosIds();
     List<TodoEntity> todoRes = todoRepository.findAllById(todosids);
     if (todoRes.isEmpty()) {
@@ -290,62 +229,62 @@ public class TodoService {
       todo.setDeletedAt(Instant.now());
     }
     todoRepository.saveAll(todoRes);
-    return new ResponseEntity<>("All todos soft deleted successfully", HttpStatus.OK);
+    MessageDto message = new MessageDto();
+    message.setMessage("All Todos Deleted Successfully");
+    return new ResponseEntity<>(message, HttpStatus.OK);
   }
 
-  public ResponseEntity<ResponseTodoDto> restoreTodo(String token, Long id) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<TodoEntity> todos = todoRepository.findByCustomId(id);
-    if (todos.isEmpty()) {
+  public ResponseEntity<MessageDto> restoreTodo(Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    if (!(authentication.getPrincipal() instanceof UserDetailsImpl userDetails)) {
+      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+    }
+    String email = userDetails.getEmail();
+    Optional<UserEntity> userOptional = userRepository.findByEmail(email);
+    if (userOptional.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    TodoEntity userTodo =
-        todos.stream()
-            .filter(
-                todo ->
-                    user.get().getTodosIds().contains(todo.getId()) && todo.getDeletedAt() != null)
-            .findFirst()
-            .orElse(null);
-    if (userTodo == null) {
+    UserEntity user = userOptional.get();
+    Optional<TodoEntity> todoOptional =
+        todoRepository.findByUserIdAndCustomIdAndDeletedAtIsNotNull(user.getId(), id);
+
+    if (todoOptional.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    userTodo.setDeletedAt(null);
-    todoRepository.save(userTodo);
-    ResponseTodoDto userTodos = ResponseTodoDto.from(userTodo);
-    return new ResponseEntity<>(userTodos, HttpStatus.OK);
+    TodoEntity todo = todoOptional.get();
+    todo.setDeletedAt(null);
+    todoRepository.save(todo);
+    MessageDto message = new MessageDto("Todo Restored Successfully");
+    return ResponseEntity.ok(message);
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> restoreManyTodo(String token, String ids) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<Long> idList =
-        Arrays.stream(ids.split(","))
-            .map(String::trim)
-            .map(Long::parseLong)
-            .collect(Collectors.toList());
-    List<String> todosids = user.get().getTodosIds();
+  public ResponseEntity<MessageDto> restoreManyTodo(List<RequestTodoDto> todoDtoList) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    if (!(authentication.getPrincipal() instanceof UserDetailsImpl userDetails)) {
+      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+    }
+    String email = userDetails.getEmail();
+    Optional<UserEntity> userOptional = userRepository.findByEmail(email);
+    if (userOptional.isEmpty()) {
+      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+    }
+    UserEntity user = userOptional.get();
+    List<Long> idList = todoDtoList.stream().map(RequestTodoDto::getId).toList();
     List<TodoEntity> todos =
-        todoRepository.findAllByCustomIdIn(idList).stream()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .toList();
+        todoRepository.findByUserIdAndCustomIdInAndDeletedAtIsNotNull(user.getId(), idList);
     if (todos.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-    for (TodoEntity todo : todos) {
-      todo.setDeletedAt(null);
-    }
+    todos.forEach(todo -> todo.setDeletedAt(null));
     todoRepository.saveAll(todos);
-    List<ResponseTodoDto> responseDtos = todos.stream().map(ResponseTodoDto::from).toList();
-    return new ResponseEntity<>(responseDtos, HttpStatus.OK);
+    return ResponseEntity.ok(new MessageDto("Todos Restored Successfully"));
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> restoreAllTodo(String token) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
+  public ResponseEntity<MessageDto> restoreAllTodo() {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+    String email = userDetails.getEmail();
+    Optional<UserEntity> user = userRepository.findByEmail(email);
     List<String> todosids = user.get().getTodosIds();
     List<TodoEntity> todos = todoRepository.findAllById(todosids);
     for (TodoEntity todo : todos) {
@@ -353,58 +292,8 @@ public class TodoService {
     }
     todoRepository.saveAll(todos);
     userRepository.save(user.get());
-    List<ResponseTodoDto> responseDtos = todos.stream().map(ResponseTodoDto::from).toList();
-    return new ResponseEntity<>(responseDtos, HttpStatus.OK);
-  }
-
-  public ResponseEntity<ResponseTodoDto> setDueDate(String token, Long id, DueDateDto dueDate) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    TodoEntity todoRes =
-        todoRepository.findByCustomId(id).stream()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .findFirst()
-            .orElse(null);
-    if (todoRes == null) {
-      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-    }
-    todoRes.setDueDate(dueDate.getDueDate());
-    todoRepository.save(todoRes);
-    return new ResponseEntity<>(ResponseTodoDto.from(todoRes), HttpStatus.OK);
-  }
-
-  public ResponseEntity<ResponseTodoDto> setTags(String token, Long id, List<String> tags) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    TodoEntity todoRes =
-        todoRepository.findByCustomId(id).stream()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .findFirst()
-            .orElse(null);
-    if (todoRes == null) {
-      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-    }
-    List<Tags> validTags =
-        tags.stream()
-            .map(
-                tag -> {
-                  try {
-                    return Tags.valueOf(tag);
-                  } catch (IllegalArgumentException e) {
-                    return null;
-                  }
-                })
-            .filter(Objects::nonNull)
-            .collect(Collectors.toList());
-    if (validTags.isEmpty()) {
-      return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(null);
-    }
-    todoRes.setTags(validTags);
-    todoRepository.save(todoRes);
-    return new ResponseEntity<>(ResponseTodoDto.from(todoRes), HttpStatus.OK);
+    MessageDto message = new MessageDto();
+    message.setMessage("All Todos Restored Successfully");
+    return new ResponseEntity<>(message, HttpStatus.OK);
   }
 }
